--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@ ul {
   margin: 0;
 }
 
+/* ====================TIMER======================= */
 .nav-link {
   display: block;
   margin-bottom: 12px;
@@ -74,4 +75,68 @@ ul {
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
+}
+
+/* ==================SHACKBAR================= */
+.form {
+  width: 408px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  color: #2e2f42;
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.form-label > input {
+  margin: 0;
+  padding: 8px 16px;
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid #2e2f42;
+}
+
+fieldset {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+  padding: 12px;
+  border-radius: 4px;
+  border: 1px solid #2e2f42;
+  margin: 0;
+}
+*/ legend {
+}
+.radio-label {
+}
+
+.radio-label > input {
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  background-color: #4e75ff;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  font-weight: 500;
 }
